fix minor css bugs on mobile

--- a/src/css/components/_Navigation.styl
+++ b/src/css/components/_Navigation.styl
@@ -44,13 +44,11 @@
   background-color: $light
   left: 0
   
-  position: relative
   right: 0
   transition: all .6s ease-in-out
   z-index: 100
   &.moveInUp
     bottom: 0%
-    margin-top: 10em
   a
     font-size: .8em
     margin: 0 15px
