--- a/src/css/components/_Work.styl
+++ b/src/css/components/_Work.styl
@@ -32,6 +32,7 @@
 
   .Right-pane
     background-color: $light
+    padding-top: 10vh
     // box-shadow: 2px 0px 41px rgba(0,0,0,.2)
     &__content
       padding: 10vh 1em 3em
